<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ln_welcome_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center|bottom">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_logo" />
        </LinearLayout>


        <TextView
            android:id="@+id/townTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/fragment_login_head"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_20sp" />

        <TextView
            android:id="@+id/tv_chi_dung_dich_vu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fr_login"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_field_welcome"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center|start"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginStart="@dimen/margin_10dp"
                android:src="@drawable/icon_user" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:hint="@string/fragment_login_name"
                android:textColorHint="@color/colorWhite">
            <EditText
                android:id="@+id/edt_use_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:background="@android:color/transparent"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:text="12345678901"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="@dimen/text_14sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:background="@drawable/bg_field_welcome"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center|start"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginStart="@dimen/margin_10dp"
                android:src="@drawable/ic_pss" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:hint="@string/welcome_password"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="123"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_14sp" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center|start"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginStart="@dimen/margin_10dp"
                android:src="@drawable/ic_pss" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_dang_nhap_khach_hang"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:padding="@dimen/padding_5dp"
            android:text="@string/fragment_login"
            android:background="@drawable/custom_bg_event_button_order"
            android:textColor="@drawable/custom_bg_text_green_state"
            android:textSize="@dimen/text_16sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:background="@drawable/bg_register"
            android:padding="@dimen/padding_5dp"
            android:text="@string/fragment_dang_ky"
            android:textColor="@drawable/custom_bg_text_green_state"
            android:textSize="@dimen/text_16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btn_login_nhan_vien"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_btn_boder_white"
            android:text="@string/fragment_dang_nhap_nhan_vien"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_sign_up_staff"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:background="@drawable/bg_btn_boder_white"
            android:text="@string/fragment_dang_ky_nhan_vien"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="36dp"
            android:gravity="bottom"
            android:orientation="horizontal">


        </LinearLayout>
    </LinearLayout>
</LinearLayout>